# info-segugio

./: README.md  chainlit.md  pyproject.toml
.chainlit/: config.toml
info_segugio/: __init__.py  ai.py  config.py  prompts.py
public/: app.css  theme.json
